| Summary: | ASTERISK-29479: [patch] Channels are not put on hold for Session Progress with inactive audio | ||
| Reporter: | Bernd Zobl (b.zobl) | Labels: | patch |
| Date Opened: | 2021-06-17 02:28:01 | Date Closed: | 2021-06-22 07:59:49 |
| Priority: | Minor | Regression? | Yes |
| Status: | Closed/Complete | Components: | Resources/res_pjsip_sdp_rtp |
| Versions: | 16.18.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Debian GNU/Linux 10 (buster) 64bit | Attachments: | ( 0) session_progress.patch |
| Description: | The fix for ASTERISK-28754 changed the behaviour of when channels were put on hold. In our particular case, a "Session Progress" to an outbound "INVITE" is no longer evaluated correctly.
The `Session Progress` to an outbound INVITE seems not to be processed by `negotiate_incoming_sdp_stream()`, where, since ASTERISK-28754, the remotely held state is evaluated. The `Session Progress` is, however, processed by `apply_negotiated_sdp_stream()`, where the remotely_held state was evaluated before. My guess is that the evaluation was moved, since the `remotely_held` field is needed in `create_outgoing_sdp_stream()`, which is called after `negotiate_incoming_sdp_stream()` on an incoming offer. --- I'll attach a patch and submit it to gerrit, once the issue ID is generated. --- If I read the problem of ASTERISK-28754 correctly, the issue was that if two SIP phones A and B both hold their call the resulting audio attributes (sendrecv, sendonly, recvonly, inactive) were incorrect. I reproduced this by: A calls B A holds the call B holds the call A unholds the call B unholds the call with and without `moh_passthrough` active. The wireshark trace of the SIP messages seems conclusive and does not change the SIP-behavior with the proposed patch. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2021-06-17 02:28:02.285-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Friendly Automation (friendly-automation) 2021-06-22 07:59:50.748-0500 Change 16109 merged by Friendly Automation: res_pjsip_sdp_rtp: Evaluate remotely held for Session Progress [https://gerrit.asterisk.org/c/asterisk/+/16109|https://gerrit.asterisk.org/c/asterisk/+/16109] By: Friendly Automation (friendly-automation) 2021-06-22 08:01:34.989-0500 Change 16108 merged by Friendly Automation: res_pjsip_sdp_rtp: Evaluate remotely held for Session Progress [https://gerrit.asterisk.org/c/asterisk/+/16108|https://gerrit.asterisk.org/c/asterisk/+/16108] By: Friendly Automation (friendly-automation) 2021-06-22 08:06:41.047-0500 Change 16072 merged by George Joseph: res_pjsip_sdp_rtp: Evaluate remotely held for Session Progress [https://gerrit.asterisk.org/c/asterisk/+/16072|https://gerrit.asterisk.org/c/asterisk/+/16072] | ||